glibc (2.30-0experimental0) UNRELEASED; urgency=medium

  * New upstream release 2.30, with git updates up to 2019-08-28:
    - debian/symbols.wildcard: Add 2.30, and debian/control: Regenrate.
    - debian/patches/any/git-libio-stdout-putc.diff: Upstreamed.
    - debian/patches/any/git-pexpect-pretty-printers.diff: Upstreamed.
    - debian/patches/any/git-socket-constants.diff: Upstreamed.
    - debian/patches/any/local-tst-eintr1-eagain.diff: Obsolete.
    - debian/patches/hurd-i386/git-renameat2.diff: Upstreamed.
    - debian/patches/any/submitted-resolv-unaligned.diff: Rebased.
    - debian/patches/hurd-i386/tg-hurdsig-SA_SIGINFO.diff: Rebased.
    - debian/patches/hurd-i386/tg-hurdsig-fixes-2.diff: Rebased.
    - debian/patches/hurd-i386/tg-hurdsig-fixes.diff: Rebased.
    - debian/patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rebased.
    - debian/patches/hurd-i386/tg-io_select_timeout.diff: Rebased.
    - debian/patches/hurd-i386/tg-thread-cancel.diff: Rebased.
    - debian/patches/kfreebsd/submitted-auxv.diff: Rebased.
    - debian/patches/locale/locale-print-LANGUAGE.diff: Update for new test.

 -- Adam Conrad <adconrad@0c3.net>  Thu, 29 Aug 2019 01:58:14 -0600

glibc (2.29-0experimental1) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/hurd-i386/submitted-net.diff: rebase.
  * debian/patches/hurd-i386/local-fix-nss.diff: rebase.
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix math tests on hppa.
  * debian/testsuite-xfail-debian.mk: XFAIL two new tests on HPPA that are
    due to a bug in the testsuite, reported upstream.
  * debian/sysdeps/sparc64.mk: disable PIE on sparc64 as it produces broken
    binaries, causing issues in the testsuite.
  * debian/sysdeps/alpha.mk, debian/control.in/main: build with gcc-8 on alpha
    as gcc-9 introduces math errors in the testsuite.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 21 Aug 2019 11:13:51 +0200
