@@ -40,6 +40,6 @@ Index: glibc-2.29/nss/Makefile
  
 -tests-container = \
 +tests += \
- 			  tst-nss-test3
- 
- # Tests which need libdl
+ 			  tst-nss-test3 \
+ 			  tst-nss-files-hosts-long \
+ 			  tst-nss-db-endpwent \
