@@ -1,7 +1,8 @@
 glibc (2.30-0experimental0) UNRELEASED; urgency=medium
 
+  [ Adam Conrad ]
   * New upstream release 2.30, with git updates up to 2019-08-28:
-    - debian/symbols.wildcard: Add 2.30, and debian/control: Regenrate.
+    - debian/symbols.wildcard: Add 2.30, and debian/control: Regenerate.
     - debian/patches/any/git-libio-stdout-putc.diff: Upstreamed.
     - debian/patches/any/git-pexpect-pretty-printers.diff: Upstreamed.
     - debian/patches/any/git-socket-constants.diff: Upstreamed.
@@ -16,6 +17,9 @@ glibc (2.30-0experimental0) UNRELEASED; urgency=medium
     - debian/patches/hurd-i386/tg-thread-cancel.diff: Rebased.
     - debian/patches/kfreebsd/submitted-auxv.diff: Rebased.
     - debian/patches/locale/locale-print-LANGUAGE.diff: Update for new test.
+
+  [ Samuel Thibault ]
+  * debian/patches/hurd-i386/local-fix-nss.diff: Rebased.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 29 Aug 2019 01:58:14 -0600
 
